--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment3</title>
+    <style>
+        table{
+            width: 100%;
+            margin-top: 15%;
+        }
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            border: 2px solid;
+            padding: 10px;
+            text-align: justify;
+        }
+        th{
+            background-color: chocolate;
+        }
+        tr:nth-child(even) {
+            background-color: #D6EEEE;
+        }
+    </style>
 </head>
 <body>
     <table>
@@ -15,32 +34,32 @@
 
         <tr>
             <td>Itel</td>
-            <td></td>
-            <td></td>
+            <td>4GB RAM + 62GB ROM</td>
+            <td>#62,000</td>
         </tr>
 
         <tr>
             <td>Infinix</td>
-            <td></td>
-            <td></td>
+            <td>4GB RAM + 128GB ROM</td>
+            <td>#89,000</td>
         </tr>
 
         <tr>
             <td>Xiaomi</td>
-            <td></td>
-            <td></td>
+            <td>6GB RAM + 128GB ROM</td>
+            <td>#125,000</td>
         </tr>
 
         <tr>
             <td>Tecno</td>
-            <td></td>
-            <td></td>
+            <td>8GB RAM + 256GB ROM</td>
+            <td>#128,000</td>
         </tr>
 
         <tr>
             <td>Iphone</td>
-            <td></td>
-            <td></td>
+            <td>16GB RAM + 512GB ROM</td>
+            <td>#250,000</td>
         </tr>
     </table>
 </body>
